# givetray

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml
src/: main.rs
